@@ -564,7 +564,10 @@ class Popen(Process):
 
     def __init__(self, *args, **kwargs):
         self.__subproc = subprocess.Popen(*args, **kwargs)
-        Process.__init__(self, self.__subproc.pid)
+        self._pid = pid
+        self._platform_impl = _psplatform.Process(pid)
+        self._last_sys_cpu_times = None
+        self._last_proc_cpu_times = None
 
     def __dir__(self):
         return list(set(dir(Popen) + dir(subprocess.Popen)))
